feat: job method instead of normal textarea input

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 # Backend API URL (required)
 BACKEND_URL=http://localhost:8000
+
+# API key for authenticating with the agent backend (required)
+AGENT_API_KEY=your-api-key-here
